--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<release>17</release>
+					<release>8</release>
 				</configuration>
 			</plugin>
 
@@ -74,7 +74,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.3.2</version>
 				<configuration>
-					<failOnMissingWebXml>false</failOnMissingWebXml>
+				<!--	<failOnMissingWebXml>false</failOnMissingWebXml> -->
 					<packagingIncludes>WEB-INF/lib/*.jar</packagingIncludes>
 					<archive>
 						<manifest>
