--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
 			<version>4.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20240303</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -74,7 +81,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.3.2</version>
 				<configuration>
-				<!--	<failOnMissingWebXml>false</failOnMissingWebXml> -->
+					<!--	<failOnMissingWebXml>false</failOnMissingWebXml> -->
 					<packagingIncludes>WEB-INF/lib/*.jar</packagingIncludes>
 					<archive>
 						<manifest>
