--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,26 @@
 					<release>17</release>
 				</configuration>
 			</plugin>
-
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
+				<version>1.0.0</version>
+				<executions>
+					<execution>
+						<phase>initialize</phase>
+						<goals>
+							<goal>read-project-properties</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<systemProperties>
+						<systemProperty>TWILIO_ACCOUNT_SID</systemProperty>
+						<systemProperty>TWILIO_AUTH_TOKEN</systemProperty>
+						<systemProperty>TWILIO_PHONE_NUMBER</systemProperty>
+					</systemProperties>
+				</configuration>
+			</plugin>
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.3.2</version>
